# ticom

./: .gitignore  Cargo.toml  README.md  email.txt  log4rs.yaml  products.txt  user.txt
src/: account.rs  main.rs
