[package]
name = "ti"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends
log = "0.4"
log4rs = "1"
# tokio + rustls
reqwest = {version = "0.11", features = ["cookies", "gzip"]}
reqwest_cookie_store="0.2"
thirtyfour = "0.27"
tokio = {version = "1", features = ["full"]}
cookie_store="0.15"
serde = "1"
serde_derive = "1"
serde_json = { version = "1", default-features = false, features = ["alloc"] }
image="0.23.14"

# [features]
# default = []
# persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
