[package]
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"
name = "ti"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
eframe = "0.15.0" # Gives us egui, epi and web+native backends
log = "0.4" 
log4rs = "1" 
# tokio + rustls
cookie_store = "0.15"
image = "0.23.14"
lettre = "0.9"
lettre_email = "0.9"
reqwest = {version = "0.11", features = ["cookies", "gzip"]}
reqwest_cookie_store = "0.2"
serde = "1"
serde_derive = "1"
serde_json = {version = "1", default-features = false, features = ["alloc"]}
thirtyfour = "0.27"
tokio = {version = "1", features = ["full"]}


[profile.release]
opt-level = 3
debug = false

# [features]
# default = []
# persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
